<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_delete"
        android:title="@string/note_delete_action"
        app:iconTint="@color/icon_color_red"
        app:showAsAction="ifRoom" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_undo"
        android:title="@string/note_cancel_action"
        app:iconTint="@color/icon_color_blue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_check"
        android:title="@string/note_save_action"
        app:iconTint="@color/icon_color_green"
        app:showAsAction="ifRoom" />
</menu>